--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_splash_screen: ^1.3.0
-  artemis: null
   avatar_glow: ^2.0.2
-  build_runner: ^2.2.1
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   google_fonts: ^3.0.1
-  gql: null
-  json_serializable: ^6.4.0
-  meta: ^1.8.0
+  intl: ^0.17.0
   responsive_grid: ^2.1.0
 
 dev_dependencies:
